--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+indicatif = "0.17.5"
 
 [dependencies.pyo3]
 version = "0.18.0"
