--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 indicatif = "0.17.5"
+nalgebra = "0.29.0"
+approx = "0.5.1"
 
 [dependencies.pyo3]
 version = "0.18.0"
